flux/bastille/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &hostname flux.chancey.dev
spec:
  hostnames:
    - *hostname
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /
